--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
   <div class="page">
     <header class="header">
       <!--Header-->
-      <img src="images/logo/logo_place_header.svg" alt="Логотип" class="logo logo_place_header">
+      <img src="images/logo/logo_place_header.svg" alt="Логотип Яндекс Практикума" class="logo logo_place_header">
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей
         жизни? <a href="" class="header__link">Узнать &#8594;</a></p>
-      <img class="header__main-illustration" src="images/header-image.png" alt="Опять двойка">
+      <img class="header__main-illustration" src="images/header-image.png" alt="Изображение известной картины художника Фёдора Решетникова Опять двойка. На ней мы видим семью, что встречает мальчика, вернувшегося из школы. Его вид красноречиво говорит о том, что вместо уроков он занимался катанием на коньках, играл “в войну” с дворовыми ребятами. Особенное внимание к себе привлекают младший брат главного героя и собака. Они рады видеть своего любимца, ведь хотят поиграть с ним. Мать мальчугана с грустью смотрит на него, а старшая сестра явно осуждает.
+      ">
       <div class="header__square-pic rotation"></div>
     </header>
     <main class="content">
@@ -44,29 +45,34 @@
         <p class="section-subtitle">Пять практик от Барбары Оакли</p>
         <ul class="cards">
           <li class="cards__item">
-            <img class="cards__image" src="images/cards-attention.png" alt="Виды внимания">
+            <img class="cards__image" src="images/cards-attention.png"
+              alt="На картинке изображена книга, которая изображает двавида внимания">
             <h3 class="cards__title">Два вида внимания</h3>
             <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное
               мышление.</p>
           </li>
           <li class="cards__item">
-            <img class="cards__image" src="images/cards-recall.png" alt="Вспомнить">
+            <img class="cards__image" src="images/cards-recall.png"
+              alt="Изображение скульптуры мальчика, который старается вспомнить что-то">
             <h3 class="cards__title">Recall</h3>
             <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
           </li>
           <li class="cards__item">
-            <img class="cards__image" src="images/cards-interliving.png" alt="Интерливинг">
+            <img class="cards__image" src="images/cards-interliving.png"
+              alt="Изображение большого зала, котрый ассоциируется с возможностями параллельного обучения">
             <h3 class="cards__title">Интерливинг</h3>
             <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
           </li>
           <li class="cards__item">
-            <img class="cards__image" src="images/cards-question.png" alt="Вопросы">
+            <img class="cards__image" src="images/cards-question.png"
+              alt="На картинке изображена пустая комната, в ней стоит человек, который задаёт к себе много вопросов">
             <h3 class="cards__title">Вопросы</h3>
             <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно
               волнует.</p>
           </li>
           <li class="cards__item">
-            <img class="cards__image" src="images/cards-competence.png" alt="Иллюзия компетентности">
+            <img class="cards__image" src="images/cards-competence.png"
+              alt="Несколько книг в руке, что означает отсутствие знаний без применения их на практике">
             <h3 class="cards__title">Иллюзия компетентности</h3>
             <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы
               владеете новой темой.</p>
@@ -106,7 +112,8 @@
         <!-- Треугольник -->
         <h2 class="feynman__title">Метод Фейнмана</h2>
         <p class="feynman__subtitle">Выучить и не забыть.</p>
-        <img class="feynman__main-illustration" src="images/feynman.png" alt="Фейнман">
+        <img class="feynman__main-illustration" src="images/feynman.png"
+          alt="Изображение портрета Фейнмана - американского учёного. Основные его достижения относятся к области теоретической физики. Один из создателей квантовой электродинамики.">
         <a href="" class="feynman__link">Подробнее &#8594;</a>
       </section>
       <section class="digits">
@@ -166,7 +173,8 @@
           <p class="khan__quote-author">Джордж Лукас</p>
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
-            <img class="khan__book-pic" src="images/khan-book.jpg" alt="Обложка книги">
+            <img class="khan__book-pic" src="images/khan-book.jpg"
+              alt="Обложка книги Салмана Хана, которая называется Весь мир - школа. Данная книга предлагает больше чем решение, она приглашает нас воспользоваться возможностью заглянуть в настоящее, где получение бесплатного, универсального, глобального образования становится реальностью.">
             <a href="" class="khan__buy-link">Купить книгу &#8594;</a>
           </div>
         </div>
@@ -226,16 +234,20 @@
         <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
         <ul class="resources__logo-zone">
           <li>
-            <a href=""><img class="resources__logo" src="images/logo/resources-arzamas.svg" alt="Арзамас"></a>
+            <a href=""><img class="resources__logo" src="images/logo/resources-arzamas.svg"
+                alt="Данная ссылка ведёт на сайт Арзамас, посвященный истории культуры. Этот сайт рассказывает самыми разными способами о литературе, искусстве, истории и других гуманитарных науках, то есть о самом интересном в мире."></a>
           </li>
           <li>
-            <a href=""><img class="resources__logo" src="images/logo/resources-n1.svg" alt="Н1"></a>
+            <a href=""><img class="resources__logo" src="images/logo/resources-n1.svg"
+                alt="Данная ссылка ведёт на сайт Н1. Это научно-популярное развлекательное издание о том, что происходит в науке, технике и технологиях прямо сейчас."></a>
           </li>
           <li>
-            <a href=""><img class="resources__logo" src="images/logo/resources-strelka.svg" alt="Стрелка"></a>
+            <a href=""><img class="resources__logo" src="images/logo/resources-strelka.svg"
+                alt="Данная ссылка ведёт на сайт Стрелка. Это издание Института «Стрелка», где рассказывается о том, как устроены современные города и как сделать их лучше"></a>
           </li>
           <li>
-            <a href=""><img class="resources__logo" src="images/logo/resources-polka.svg" alt="Полка"></a>
+            <a href=""><img class="resources__logo" src="images/logo/resources-polka.svg"
+                alt="Данная ссылка ведёт на сайт Полка. Это образовательный проект о самых важных произведениях русской литературы"></a>
           </li>
         </ul>
       </section>
@@ -244,7 +256,7 @@
       <!--Подвал-->
       <div class="footer__columns">
         <div class="footer__column footer__column_content_copyright">
-          <img class="logo logo_place_footer" alt="Логотип" src="images/logo/logo_place_footer.svg">
+          <img class="logo logo_place_footer" alt="Логотип Яндекс Практикума" src="images/logo/logo_place_footer.svg">
           <p class="footer__author">&copy; 2021. Екатерина Преснякова.</p>
         </div>
         <nav class="footer__column footer__column_content_info">
@@ -266,15 +278,15 @@
           <ul class="footer__column-links">
             <li>
               <a href="" class="footer__column-link"><img class="footer__social-icon"
-                  src="images/icon/facebook_color_white.svg" lang="en" alt="Facebook">Facebook</a>
+                  src="images/icon/facebook_color_white.svg" lang="en" alt="Логотип Facebook">Facebook</a>
             </li>
             <li>
               <a href="" class="footer__column-link"><img class="footer__social-icon"
-                  src="images/icon/vk_color_white.svg" alt="ВКонтакте">ВКонтакте</a>
+                  src="images/icon/vk_color_white.svg" alt="Логотип ВКонтакте">ВКонтакте</a>
             </li>
             <li>
               <a href="" class="footer__column-link"><img class="footer__social-icon"
-                  src="images/icon/instagram_color_white.svg" lang="en" alt="Instagram">Instagram</a>
+                  src="images/icon/instagram_color_white.svg" lang="en" alt="Доготип Instagram">Instagram</a>
             </li>
           </ul>
         </nav>
